# Peregrine_attack

./: README.md
Reference_attack/data/: Linv_array_reference.ha  cov_array_reference.ha  key_real_array_reference.ha  key_recovered_array_reference.ha  norm_array_reference.ha  pk_array_reference.ha
Reference_attack/decoding_technique/: improved_decoding.py  key_process_reference.py  utils.py
Reference_attack/parallelepiped_learning_attack/rust_peregrine_attack_f64/: Cargo.toml
Reference_attack/parallelepiped_learning_attack/rust_peregrine_attack_f64/src/: main.rs
Reference_attack/parallelepiped_learning_attack/rust_peregrine_attack_f64/src/peregrine_attack/: functions.rs
Reference_attack/parallelepiped_learning_attack/rust_peregrine_attack_f64/src/peregrine_scheme/: mod.rs  sig_gen.rs
Specification_attack/data/: cov_array_specification.ha  key_real_array_specification.ha  key_recovered_array_specification.ha  norm_array_specification.ha  pk_array_specification.ha
Specification_attack/decoding_technique/: improved_decoding.py  key_process.py  utils.py
Specification_attack/parallelepiped_learning_attack/rust_peregrine_attack_f64/src/: main.rs
Specification_attack/parallelepiped_learning_attack/rust_peregrine_attack_f64/src/peregrine_attack/: functions.rs
Specification_attack/parallelepiped_learning_attack/rust_peregrine_attack_f64/src/peregrine_scheme/: sig_gen.rs
